# stoat

./: Cargo.toml  README.md
src/: lib.rs  main.rs  note.rs
src/note/: block.rs  line.rs  metadata.rs  mod.rs  render.rs  span.rs
test/: fun.md  hi.md  ol.md
test/nested/: inner.md
